# meet-media-api-samples

./: WORKSPACE  package-lock.json  package.json
.github/actions/prepare-deps/: action.yml
.github/workflows/: main.yml  prepare-deps.yml
cpp/: BUILD.gn  build.sh  run_multi.sh  run_single.sh
cpp/api/: BUILD  BUILD.gn  media_api_client_factory_interface.h  media_api_client_interface.h  media_entries_resource.h  media_stats_resource.h  participants_resource.h  session_control_resource.h  video_assignment_resource.h
cpp/internal/: BUILD  BUILD.gn  conference_data_channel.cc  conference_data_channel.h  conference_data_channel_interface.h  conference_data_channel_test.cc  conference_media_tracks.cc  conference_media_tracks.h  conference_media_tracks_test.cc  conference_peer_connection.cc  conference_peer_connection.h  conference_peer_connection_interface.h  conference_peer_connection_test.cc  curl_connector.cc  curl_connector.h  curl_connector_test.cc  curl_request.cc  curl_request.h  curl_request_test.cc  http_connector_interface.h  media_api_audio_device_module.cc  media_api_audio_device_module.h  media_api_audio_device_module_test.cc  media_api_client.cc  media_api_client.h  media_api_client_factory.cc  media_api_client_factory.h  media_api_client_factory_test.cc  media_api_client_test.cc  media_entries_resource_handler.cc  media_entries_resource_handler.h  media_entries_resource_handler_test.cc  media_stats_resource_handler.cc  media_stats_resource_handler.h  media_stats_resource_handler_test.cc  participants_resource_handler.cc  participants_resource_handler.h  participants_resource_handler_test.cc  resource_handler_interface.h  session_control_resource_handler.cc  (+10 more)
cpp/internal/testing/: mock_curl_api_wrapper.h  mock_media_api_client_observer.h  sdp_constants.h
cpp/samples/: BUILD  BUILD.gn  media_writing.cc  media_writing.h  multi_user_media_collector.cc  multi_user_media_collector.h  multi_user_media_collector_test.cc  multi_user_media_sample.cc  output_file.cc  output_file.h  output_writer_interface.h  resource_manager.cc  resource_manager.h  resource_manager_interface.h  resource_manager_test.cc  single_user_media_collector.cc  single_user_media_collector.h  single_user_media_collector_test.cc  single_user_media_sample.cc
cpp/samples/testing/: BUILD  BUILD.gn  media_data.cc  media_data.h  mock_output_writer.h  mock_resource_manager.h
meet-live-agent/: Dockerfile  README.md  deploy.sh  deployment.json  index.css  index.html  index.tsx  package-lock.json  package.json  sample.env  vite.config.ts
meet-live-agent/internal/: meetmediaapiclient_impl.ts
meet-live-agent/internal/channel_handlers/: media_stats_channel_handler.ts
meet-live-agent/internal/communication_protocols/: default_communication_protocol_impl.ts
meet-live-agent/public/: pcm-recorder-processor.js
meet-live-agent/server/: package-lock.json  package.json  server.js
web/: meetmediaapiclient.ts
web/internal/: internal_meet_stream_track_impl.ts  internal_types.ts  meetmediaapiclient_impl.ts  utils.ts
web/internal/channel_handlers/: BUILD  media_entries_channel_handler.ts  media_stats_channel_handler.ts  session_control_channel_handler.ts  video_assignment_channel_handler.ts
web/internal/communication_protocols/: default_communication_protocol_impl.ts
web/samples/: package.json  script.ts
web/types/: mediatypes.d.ts  meetmediaapiclient.d.ts
