# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../webrtc.gni")

rtc_library("meet_media_api_client") {
  # This target is empty of sources; it's just a collection of dependencies.
  sources = []

  public_deps = [
    "api:media_api_client_factory_interface",
    "api:media_api_client_interface",
    "samples:multi_user_media_sample",
    "samples:single_user_media_sample",
  ]

  deps = [
    "internal:media_api_client_factory",
  ]
}
