# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../webrtc.gni")

rtc_executable("multi_user_media_sample") {
  sources = [ "multi_user_media_sample.cc" ]
  deps = [
    ":multi_user_media_collector",
    "../api:media_api_client_interface",
    "../api:video_assignment_resource",
    "../internal:media_api_client_factory",
    "//third_party/abseil-cpp/absl/flags:flag",
    "//third_party/abseil-cpp/absl/flags:parse",
    "//third_party/abseil-cpp/absl/flags:usage",
    "//third_party/abseil-cpp/absl/log",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/status:statusor",
    "//third_party/abseil-cpp/absl/time",
    "../../api:make_ref_counted",
    "../../rtc_base:threading",
  ]
}

rtc_library("multi_user_media_collector") {
  sources = [
    "multi_user_media_collector.cc",
    "multi_user_media_collector.h",
  ]
  deps = [
    ":media_writing",
    ":output_file",
    ":output_writer_interface",
    ":resource_manager",
    ":resource_manager_interface",
    "../api:media_api_client_interface",
    "../api:media_entries_resource",
    "../api:participants_resource",
    "//third_party/abseil-cpp/absl/container:flat_hash_map",
    "//third_party/abseil-cpp/absl/functional:any_invocable",
    "//third_party/abseil-cpp/absl/log",
    "//third_party/abseil-cpp/absl/log:check",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/strings:str_format",
    "//third_party/abseil-cpp/absl/strings:string_view",
    "//third_party/abseil-cpp/absl/synchronization",
    "//third_party/abseil-cpp/absl/time",
    "../../api:scoped_refptr",
    "../../api/video:video_frame",
    "../../rtc_base:threading",
  ]
}

rtc_test("multi_user_media_collector_test") {
  sources = [ "multi_user_media_collector_test.cc" ]
  deps = [
    ":multi_user_media_collector",
    ":output_writer_interface",
    "./testing:media_data",
    "./testing:mock_output_writer",
    "./testing:mock_resource_manager",
    "//third_party/abseil-cpp/absl/base:log_severity",
    "//third_party/abseil-cpp/absl/log:globals",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/synchronization",
    "//third_party/abseil-cpp/absl/time",
    "../../api:make_ref_counted",
    "../../rtc_base:threading",
  ]
}

rtc_source_set("resource_manager_interface") {
  sources = [ "resource_manager_interface.h" ]
  deps = [
    "../api:media_entries_resource",
    "../api:participants_resource",
    "//third_party/abseil-cpp/absl/status:statusor",
    "//third_party/abseil-cpp/absl/time",
  ]
}

rtc_library("resource_manager") {
  sources = [
    "resource_manager.cc",
    "resource_manager.h",
  ]
  deps = [
    ":output_writer_interface",
    ":resource_manager_interface",
    "../api:media_entries_resource",
    "../api:participants_resource",
    "//third_party/abseil-cpp/absl/container:flat_hash_map",
    "//third_party/abseil-cpp/absl/log",
    "//third_party/abseil-cpp/absl/log:check",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/status:statusor",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/strings:str_format",
    "//third_party/abseil-cpp/absl/strings:string_view",
    "//third_party/abseil-cpp/absl/time",
  ]
}

rtc_test("resource_manager_test") {
  sources = [ "resource_manager_test.cc" ]
  deps = [
    ":resource_manager",
    "../api:media_entries_resource",
    "../api:participants_resource",
    "./testing:mock_output_writer",
    "//third_party/abseil-cpp/absl/base:log_severity",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/status:statusor",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/time",
  ]
}

rtc_executable("single_user_media_sample") {
  sources = [ "single_user_media_sample.cc" ]
  deps = [
    ":single_user_media_collector",
    "../api:media_api_client_interface",
    "../api:video_assignment_resource",
    "../internal:media_api_client_factory",
    "//third_party/abseil-cpp/absl/flags:flag",
    "//third_party/abseil-cpp/absl/flags:parse",
    "//third_party/abseil-cpp/absl/flags:usage",
    "//third_party/abseil-cpp/absl/log",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/status:statusor",
    "//third_party/abseil-cpp/absl/time",
    "../../api:make_ref_counted",
    "../../rtc_base:threading",
  ]
}

rtc_library("single_user_media_collector") {
  sources = [
    "single_user_media_collector.cc",
    "single_user_media_collector.h",
  ]
  deps = [
    ":media_writing",
    ":output_file",
    ":output_writer_interface",
    "../api:media_api_client_interface",
    "//third_party/abseil-cpp/absl/base:nullability",
    "//third_party/abseil-cpp/absl/log",
    "//third_party/abseil-cpp/absl/log:check",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/strings:string_view",
    "//third_party/abseil-cpp/absl/synchronization",
    "//third_party/abseil-cpp/absl/time",
    "../../api:scoped_refptr",
    "../../api/video:video_frame",
    "../../rtc_base:threading",
  ]
}

rtc_test("single_user_media_collector_test") {
  sources = [ "single_user_media_collector_test.cc" ]
  deps = [
    ":output_writer_interface",
    ":single_user_media_collector",
    "../api:media_api_client_interface",
    "./testing:media_data",
    "./testing:mock_output_writer",
    "//third_party/abseil-cpp/absl/status",
    "//third_party/abseil-cpp/absl/strings",
    "//third_party/abseil-cpp/absl/synchronization",
    "//third_party/abseil-cpp/absl/time",
    "../../api:make_ref_counted",
    "../../api:scoped_refptr",
    "../../rtc_base:threading",
  ]
}

rtc_source_set("output_writer_interface") {
  sources = [ "output_writer_interface.h" ]
  deps = [
    "//third_party/abseil-cpp/absl/functional:any_invocable",
    "//third_party/abseil-cpp/absl/strings:string_view",
  ]
}

rtc_library("output_file") {
  sources = [
    "output_file.cc",
    "output_file.h",
  ]
  deps = [ ":output_writer_interface" ]
}

rtc_library("media_writing") {
  sources = [
    "media_writing.cc",
    "media_writing.h",
  ]
  deps = [
    ":output_writer_interface",
    "../../api/video:video_frame",
  ]
}
