# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../webrtc.gni")

rtc_library("media_data") {
  testonly = true
  sources = [
    "media_data.cc",
    "media_data.h",
  ]
  deps = [
    "../../../api/video:video_frame",
    "../../../api:scoped_refptr",
    "../../api:media_api_client_interface",
    "//third_party/abseil-cpp/absl/base:core_headers",
    "//third_party/abseil-cpp/absl/base:nullability",
  ]
}

rtc_library("mock_output_writer") {
  testonly = true
  sources = [ "mock_output_writer.h" ]
  deps = [
    "../../../test:test_support",
    "..:output_writer_interface",
    "//third_party/abseil-cpp/absl/base:nullability",
  ]
}

rtc_library("mock_resource_manager") {
  testonly = true
  sources = [ "mock_resource_manager.h" ]
  deps = [
    "../../../test:test_support",
    "../../api:media_entries_resource",
    "../../api:participants_resource",
    "..:resource_manager_interface",
    "//third_party/abseil-cpp/absl/base:nullability",
    "//third_party/abseil-cpp/absl/status:statusor",
    "//third_party/abseil-cpp/absl/time",
  ]
}
